load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library", "swift_library_group")
load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:package_info.bzl", "package_info")

package(
    default_package_metadata = [
        ":license.rspm",
        ":package_info.rspm",
    ],
)

exports_files(["pkg_info.json"])

license(
    name = "license.rspm",
    license_text = "LICENSE",
)

package_info(
    name = "package_info.rspm",
    package_name = "swift-custom-dump",
    package_url = "https://github.com/pointfreeco/swift-custom-dump",
    package_version = "1.3.3",
)

swift_library(
    name = "CustomDump.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_xctest_dynamic_overlay//:IssueReporting",
        "@swiftpkg_xctest_dynamic_overlay//:XCTestDynamicOverlay",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "CustomDump",
    package_name = "swift-custom-dump",
    srcs = [
        "Sources/CustomDump/Conformances/CoreImage.swift",
        "Sources/CustomDump/Conformances/CoreLocation.swift",
        "Sources/CustomDump/Conformances/CoreMotion.swift",
        "Sources/CustomDump/Conformances/Foundation.swift",
        "Sources/CustomDump/Conformances/GameKit.swift",
        "Sources/CustomDump/Conformances/KeyPath.swift",
        "Sources/CustomDump/Conformances/Photos.swift",
        "Sources/CustomDump/Conformances/Speech.swift",
        "Sources/CustomDump/Conformances/StoreKit.swift",
        "Sources/CustomDump/Conformances/Swift.swift",
        "Sources/CustomDump/Conformances/SwiftUI.swift",
        "Sources/CustomDump/Conformances/UIKit.swift",
        "Sources/CustomDump/Conformances/UserNotifications.swift",
        "Sources/CustomDump/Conformances/UserNotificationsUI.swift",
        "Sources/CustomDump/CustomDumpReflectable.swift",
        "Sources/CustomDump/CustomDumpRepresentable.swift",
        "Sources/CustomDump/CustomDumpStringConvertible.swift",
        "Sources/CustomDump/Diff.swift",
        "Sources/CustomDump/Dump.swift",
        "Sources/CustomDump/ExpectDifference.swift",
        "Sources/CustomDump/ExpectNoDifference.swift",
        "Sources/CustomDump/Internal/AnyType.swift",
        "Sources/CustomDump/Internal/CollectionDifference.swift",
        "Sources/CustomDump/Internal/Identifiable.swift",
        "Sources/CustomDump/Internal/Mirror.swift",
        "Sources/CustomDump/Internal/String.swift",
        "Sources/CustomDump/Internal/Unordered.swift",
        "Sources/CustomDump/XCTAssertDifference.swift",
        "Sources/CustomDump/XCTAssertNoDifference.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library_group(
    name = "CustomDump",
    deps = ["@swiftpkg_swift_custom_dump//:CustomDump.rspm"],
    visibility = ["//visibility:public"],
)
