load("@build_bazel_rules_swift//swift:swift.bzl", "swift_binary", "swift_library", "swift_library_group")
load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:package_info.bzl", "package_info")

package(
    default_package_metadata = [
        ":license.rspm",
        ":package_info.rspm",
    ],
)

exports_files(["pkg_info.json"])

license(
    name = "license.rspm",
    license_text = "LICENSE",
)

package_info(
    name = "package_info.rspm",
    package_name = "swift-identified-collections",
    package_url = "https://github.com/pointfreeco/swift-identified-collections",
    package_version = "1.1.0",
)

swift_binary(
    name = "swift-identified-collections-benchmark.rspm",
    copts = ["-DSWIFT_PACKAGE"],
    deps = [
        "@swiftpkg_swift_identified_collections//:IdentifiedCollections.rspm",
        "@swiftpkg_swift_collections_benchmark//:CollectionsBenchmark",
    ],
    minimum_os_version = "oldest",
    module_name = "swift_identified_collections_benchmark",
    package_name = "swift-identified-collections",
    srcs = ["Sources/swift-identified-collections-benchmark/main.swift"],
    visibility = ["//:__subpackages__"],
)

swift_library(
    name = "IdentifiedCollections.rspm",
    always_include_developer_search_paths = True,
    copts = ["-DSWIFT_PACKAGE"],
    deps = ["@swiftpkg_swift_collections//:OrderedCollections"],
    minimum_os_version = "oldest",
    module_name = "IdentifiedCollections",
    package_name = "swift-identified-collections",
    srcs = [
        "Sources/IdentifiedCollections/Identified/Identified.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+Codable.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+Collection.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+CollectionAlgorithms.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+CustomDebugStringConvertible.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+CustomReflectable.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+CustomStringConvertible.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+Equatable.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+ExpressibleByArrayLiteral.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+Hashable.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+IdentifiedCollection.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+Initializers.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+Insertions.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+MutableCollection.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+RandomAccessCollection.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+RangeReplaceableCollection.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray+Sendable.swift",
        "Sources/IdentifiedCollections/IdentifiedArray/IdentifiedArray.swift",
        "Sources/IdentifiedCollections/IdentifiedCollection.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library_group(
    name = "IdentifiedCollections",
    deps = ["@swiftpkg_swift_identified_collections//:IdentifiedCollections.rspm"],
    visibility = ["//visibility:public"],
)
