load("@build_bazel_rules_swift//swift:swift.bzl", "swift_compiler_plugin", "swift_library", "swift_library_group")
load("@rules_license//rules:license.bzl", "license")
load("@rules_license//rules:package_info.bzl", "package_info")

package(
    default_package_metadata = [
        ":license.rspm",
        ":package_info.rspm",
    ],
)

exports_files(["pkg_info.json"])

license(
    name = "license.rspm",
    license_text = "LICENSE",
)

package_info(
    name = "package_info.rspm",
    package_name = "swift-perception",
    package_url = "https://github.com/pointfreeco/swift-perception",
    package_version = "1.3.5",
)

swift_compiler_plugin(
    name = "PerceptionMacros.rspm",
    copts = [
        "-DSWIFT_PACKAGE",
        "-enable-experimental-feature",
        "StrictConcurrency",
    ],
    deps = [
        "@swiftpkg_swift_syntax//:SwiftSyntaxMacros",
        "@swiftpkg_swift_syntax//:SwiftCompilerPlugin",
    ],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "PerceptionMacros",
    package_name = "swift-perception",
    srcs = [
        "Sources/PerceptionMacros/Availability.swift",
        "Sources/PerceptionMacros/Extensions.swift",
        "Sources/PerceptionMacros/PerceptibleMacro.swift",
        "Sources/PerceptionMacros/Plugins.swift",
    ],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "Perception.rspm",
    always_include_developer_search_paths = True,
    copts = [
        "-DSWIFT_PACKAGE",
        "-enable-experimental-feature",
        "StrictConcurrency",
    ],
    deps = ["@swiftpkg_xctest_dynamic_overlay//:IssueReporting"],
    minimum_os_version = select({
        "@rules_swift_package_manager//config_settings/spm/platform:ios": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:macos": "10.15",
        "@rules_swift_package_manager//config_settings/spm/platform:tvos": "13.0",
        "@rules_swift_package_manager//config_settings/spm/platform:watchos": "6.0",
        "//conditions:default": "oldest",
    }),
    module_name = "Perception",
    package_name = "swift-perception",
    plugins = ["//:PerceptionMacros.rspm"],
    srcs = [
        "Sources/Perception/Bindable.swift",
        "Sources/Perception/Environment.swift",
        "Sources/Perception/Internal/AnySendable.swift",
        "Sources/Perception/Internal/BetaChecking.swift",
        "Sources/Perception/Internal/Exports.swift",
        "Sources/Perception/Internal/Locking.swift",
        "Sources/Perception/Internal/ThreadLocal.swift",
        "Sources/Perception/Internal/UncheckedSendable.swift",
        "Sources/Perception/Internal/_PerceptionRegistrar.swift",
        "Sources/Perception/Macros.swift",
        "Sources/Perception/Perceptible.swift",
        "Sources/Perception/PerceptionChecking.swift",
        "Sources/Perception/PerceptionRegistrar.swift",
        "Sources/Perception/PerceptionTracking.swift",
        "Sources/Perception/WithPerceptionTracking.swift",
    ],
    tags = ["manual"],
    visibility = ["//:__subpackages__"],
)

swift_library_group(
    name = "Perception",
    deps = ["@swiftpkg_swift_perception//:Perception.rspm"],
    visibility = ["//visibility:public"],
)
